@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  28 Sep 2006; Roy Marples <uberlord@gentoo.org>:
+
+    When we schedule a service to start by a service, also schedule it to
+    start by anything else it provides, #145183.
+
   26 Sep 2006; Roy Marples <uberlord@gentoo.org>:
 
     Don't wait for scheduled services to restart when a service is
